[tool.poetry]
name = "courier-lhc-publications"
version = "0.1.3"
description = ""
authors = ["Micha Moskovic <michamos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
inspire-utils = "^3.0"
matplotlib = "^3.1.1"
pandas = "^0.25.3"
altair = "^4.0.1"
vegascope = "^1.0.14"
backoff = "^1.10.0"

[tool.poetry.dev-dependencies]
ipython = "^7.8"
mypy = "^0.730"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
